# nonosk

./: .ghci  .gitignore  cabal.project  default.nix  flake.nix  nonosk-lib.cabal  nonosk-lib.nix  nonosk.cabal  shell.nix  skapix-lib.cabal  solver.hs
examples/: chessboard_8x8.nono  cumber.nono  random_20x20.nono  random_25x25.nono  random_27x27.nono  random_30x30.nono  random_40x40.nono  smoking-kangaroo-smaller.nono  smoking-kangaroo.nono
nix/: import-dir.nix  overlays.nix
nix/overlays/: extra-lib.nix  import-dir.nix
nix/overlays/haskell/: default.nix
nix/overlays/haskell/overlays/: withHoogle.nix
nix/overlays/haskell/overlays/type-nat-solver/: default.nix
src/Data/Indexed/: Capped.hs  Fin.hs  ForAnyKnownIndex.hs  ForallIndex.hs  Index.hs  Nat.hs  Some.hs  SumList.hs  Trie.hs  Vector.hs  Vector2.hs  bar.hs  foo.hs
src/Data/Indexed/SumList/: QQ.hs
src/Data/Indexed/Util/: NatProofs.hs  QuasiList.hs  ShowsList.hs  ShowsListLike.hs
src/Data/Indexed/Vector/: Capped.hs  QQ.hs  Sum.hs
src/Data/Singletons/TypeLits/: Show.hs
src/Nonosk/: FileFormats.hs  Grid.hs  Hints.hs  ListSolver.hs  PathSolver.hs  PathTrie.hs  PosSet.hs  Puzzle.hs
src/Skapix/: Puzzle.hs
tests/: Main.hs
tests/Scaffolding/: Poly.hs  Probe.hs  SmallCheck.hs  TypeChoice.hs
tests/Test/Data/Indexed/: Vector.hs
tests/Test/Nonosk/: Solvers.hs
