name: nonosk-lib
version: 0.1.0.0
-- synopsis:
-- description:
license: GPL-3
license-file: LICENSE
author: Ben Mellor
maintainer: ben@smokingkangaroo.com
-- copyright:
category: Game
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  exposed-modules: Nonosk.Puzzle
                   Nonosk.FileFormats
                   Nonosk.PathTrie
                   Nonosk.PosSet
                   Data.Indexed.Capped
                   Data.Indexed.Fin
                   Data.Indexed.ForAnyKnownIndex
                   Data.Indexed.Index
                   Data.Indexed.Nat
                   Data.Indexed.Some
                   Data.Indexed.SumList
                   Data.Indexed.SumList.QQ
                   Data.Indexed.Vector
                   Data.Indexed.Vector2
                   Data.Indexed.Vector.QQ
  other-modules: Data.Indexed.Util.NatProofs
                 Data.Indexed.Util.QuasiList
                 Data.Indexed.Util.ShowsListLike
  -- other-extensions:
  build-depends: base ==4.9.*
               , bytestring
               , constraints
               , containers
               , equational-reasoning
               , ghc-prim
               , ghc-typelits-knownnat
               , ghc-typelits-natnormalise
               , haskell-src-exts
               , haskell-src-meta
               , lens
               , memoize
               , mtl
               , parallel
               , template-haskell
               , type-nat-solver
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
               -Wmissing-exported-signatures
               -Wno-unticked-promoted-constructors

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: Scaffolding.SmallCheck
                 Scaffolding.Probe
                 Test.Data.Indexed.Vector
  build-depends: base
               , nonosk-lib

               , constraints
               , tasty
               , tasty-expected-failure
               , tasty-golden
               , tasty-html
               , tasty-quickcheck
               , tasty-rerun
               , tasty-smallcheck
               , smallcheck
               , QuickCheck
               , generic-random
  ghc-options: -Wall
               -Wmissing-exported-signatures
               -Wno-unticked-promoted-constructors
               -Wno-orphans

               -O2
               -threaded
               -with-rtsopts=-N

executable solver
  main-is: solver.hs
  default-language: Haskell2010
  build-depends: base
               , bytestring
               , nonosk-lib
  ghc-options: -Wall
               -Wmissing-exported-signatures
               -Wno-unticked-promoted-constructors

               -O2
               -threaded
               -with-rtsopts=-N
